feat: complete 'Big Bang' migration to pure Signals foundation
- Replaced Svelte with a lightweight, standalone Signals foundation (@preact/signals-core)
- Created @viand/runtime workspace package with stable, additive reconciliation
- Rewrote standard library (router, intl, notify) in pure JavaScript
- Updated compiler to emit pure JS factory functions with support for:
    - Fine-grained reactivity (automated computed wrapping)
    - Two-way data binding (bind:)
    - Components and each loops
    - Conditional match statements and slot rendering
    - Reactive element references (#ref)
    - Automated CSS extraction and head injection
    - Global reactive singletons (memory modules)
- Migrated all ecosystem projects (project-test, project-blog-spa, project-blog-mpa) to the new foundation
- Updated test gauntlet to verify JS output instead of Svelte

--- a/project-blog-mpa/index.html
+++ b/project-blog-mpa/index.html
@@ -8,9 +8,9 @@
   <body>
     <div id="app"></div>
     <script type="module">
-      import { mount } from "svelte";
-      import Home from "./src/Home.viand";
-      import About from "./src/About.viand";
+      import { mount } from "@viand/runtime";
+      import { Home } from "./src/Home.viand";
+      import { About } from "./src/About.viand";
 
       const path = window.location.pathname.toLowerCase().replace(/\/$/, "");
       console.log("🌿 Viand Router DEBUG: Normalized Path is [" + (path || "/") + "]");
@@ -22,9 +22,7 @@
 
       console.log("🌿 Viand Router DEBUG: Mounting", path.includes("about") ? "About" : "Home");
 
-      mount(Entry, {
-        target: document.getElementById("app"),
-      });
+      mount(document.getElementById("app"), () => Entry());
     </script>
   </body>
 </html>
